deploy/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capa-ci-tracker
  labels:
    app.kubernetes.io/name: capa-ci-tracker
    app.kubernetes.io/part-of: capa-ci-tracker
