deploy/openshift/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: capa-ci-tracker
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: capa-ci-tracker
    app.kubernetes.io/component: frontend
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: frontend-tls
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: proxy
      port: 4180
      targetPort: 4180
      protocol: TCP
