deploy/openshift/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: capa-ci-tracker
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: capa-ci-tracker
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
