deploy/openshift/service-postgrest.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: capa-ci-tracker
  labels:
    app.kubernetes.io/name: postgrest
    app.kubernetes.io/part-of: capa-ci-tracker
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgrest
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
